base mode complete

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,5 +12,22 @@
 <body>
     <h1>Server Side Calculator</h1>
     
+    <input id="first-number-input" type="number">
+    <button id="plus-btn">+</button>
+    <button id="minus-btn">-</button>
+    <button id="multiply-btn">*</button>
+    <button id="divide-btn">/</button>
+    <input id="second-number-input" type="number">
+    <button id="equals-btn">=</button>
+    <button id="clear-btn">Clear</button>
+
+    <h3 id="result-latest"></h3>
+    <div>
+        <ul id="history-area">
+
+        </ul>
+    </div>
+    <button id="clear-history">Clear History</button>
+
 </body>
 </html>
